--- a/views/Dashboard/dashboard.ejs
+++ b/views/Dashboard/dashboard.ejs
@@ -51,7 +51,7 @@
   <div class="mx-auto pt-5">
     <!-- Logo -->
     <a class="flex-none rounded-xl text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="../templates/admin/index.html" aria-label="Preline">
-      <img src="./fti.png" alt="" style="width: 100%;;">
+      <img src="/fti.png" alt="" style="width: 100%;;">
     </a>
     <!-- End Logo -->
   </div>
@@ -238,7 +238,8 @@
 <!-- End Content -->
 <!-- ========== END MAIN CONTENT ========== -->
 
-<link rel="stylesheet" href="/style.css">
+ 
 <!-- <script src="https://cdn.jsdelivr.net/npm/preline/dist/preline.js"></script> -->
+<script src="/preline.js"></script>
 </body>
 </html>
