--- a/assets/style.css
+++ b/assets/style.css
@@ -721,6 +721,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .me-4 {
   margin-inline-end: 1rem;
 }
@@ -751,6 +755,14 @@ video {
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .mt-2 {
@@ -865,10 +877,6 @@ video {
 
 .w-2\/3 {
   width: 66.666667%;
-}
-
-.w-4 {
-  width: 1rem;
 }
 
 .w-52 {
@@ -1188,6 +1196,11 @@ video {
 
 .bg-hijauMuda {
   background-color: rgba(137, 201, 144, 1);
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1710,6 +1723,11 @@ video {
 
 .hover\:bg-hijau:hover {
   background-color: rgba(65, 144, 74, 1);
+}
+
+.hover\:bg-red-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .hover\:text-black:hover {
