--- a/views/Mahasiswa/headMhs.ejs
+++ b/views/Mahasiswa/headMhs.ejs
@@ -55,7 +55,7 @@
             <a class="inline-block text-hijau hover:text-gray-600" href="#">FAQ</a>
           </div>
           <div>
-            <a class="inline-block text-hijau hover:text-gray-600" href="#">Kontak</a>
+            <a class="inline-block text-hijau hover:text-gray-600" href="/ubah">Ubah Password</a>
           </div>
         </div>
       </div>
