--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,50 +6,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<body style="background-image:url(./RektoratView2.jpg); background-size: cover;">
-<!-- <body> -->
+<body class="bg-gray-200 h-screen" style="background-image:url(./RektoratView2.jpg); background-size: cover;font-family: Poppins;">
+  <!-- Hero -->
+  <div class="max-w-[100rem] mx-auto h-full flex items-center justify-center">
+    <!-- Flex Container -->
+    <div class="flex flex-col lg:flex-row w-full h-full">
+      <!-- Left Section (2/5 on large screens, full width on small screens) -->
+      <div class="lg:w-2/5 bg-gray-100 p-9 rounded-lg flex flex-col justify-center w-full">
+        <h1 class="text-3xl font-bold text-gray-800 sm:text-4xl md:text-5xl lg:text-4xl mt-0">Yuk, Perbaiki Nilai! Masuk Untuk Mengakses Semua <span class="text-green-600"><br>Informasi Remedial</span></h1>
 
-      <!-- Hero -->
-<div class="max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8">
-  <!-- Grid -->
-  <div class="grid lg:grid-cols-7 lg:gap-x-8 xl:gap-x-12 lg:items-center">
-    <div class="lg:col-span-3 ml-5 mt-5 sm:mx-auto sm:p-0">
-      <h1 class="block text-3xl font-bold text-gray-800 sm:text-4xl md:text-5xl lg:text-6xl mt-7">Build Better Products</h1>
-
-      <div class="w-full max-w-md p-0 pr-4 mt-5">
-        <form method="post" action="/auth/process-login">
-          <div class="grid gap-y-4">
-            <!-- Form Group -->
-            <div>
-              <label for="email" class="block text-sm mb-2">Email address</label>
-              <div class="relative">
-                <input type="email" id="email" name="email" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" required aria-describedby="email-error">
-                <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
-                  <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
-                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                  </svg>
+        <div class="w-full mt-10">
+          <form method="post" action="/auth/process-login">
+            <div class="grid gap-y-5">
+              <!-- Form Group -->
+              <div>
+                <div class="relative">
+                  <input type="email" id="email" name="email" placeholder="Email Address" class="w-full py-3 px-4 text-sm font-medium rounded-lg border border-white bg-white text-gray-800 shadow-sm hover:bg-gray-50" required aria-describedby="email-error">
                 </div>
+                <p class="hidden text-xs text-red-600 mt-2" id="email-error">Please include a valid email address so we can get back to you</p>
               </div>
-              <p class="hidden text-xs text-red-600 mt-2" id="email-error">Please include a valid email address so we can get back to you</p>
-            </div>
-            <!-- End Form Group -->
+              <!-- End Form Group -->
   
-            <!-- Form Group -->
-            <div>
-              <div class="flex justify-between items-center">
-                <label for="password" class="block text-sm mb-2">Password</label>
-                <a class="text-sm text-blue-600 decoration-2 hover:underline font-medium" href="../examples/html/recover-account.html">Forgot password?</a>
-              </div>
-              <!-- <div class="relative">
-                <input type="password" id="password" name="password" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" required aria-describedby="password-error">
-                <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
-                  <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" aria-hidden="true">
-                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                  </svg>
-                </div>
-              </div> -->
+              <!-- Form Group -->
+              <div>
               <div class="relative">
-                <input id="hs-toggle-password" name="password" type="password" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" required aria-describedby="password-error">
+                <input id="hs-toggle-password" placeholder="Password" name="password" type="password" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-white bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" required aria-describedby="password-error">
                 <button type="button" data-hs-toggle-password='{
                   "target": "#hs-toggle-password"
                 }' class="absolute top-0 end-0 p-3.5 rounded-e-md">
@@ -63,39 +44,28 @@
                   </svg>
                 </button>
               </div>
-              <p class="hidden text-xs text-red-600 mt-2" id="password-error">8+ characters required</p>
-            </div>
-            <!-- End Form Group -->
-  
-            <!-- Checkbox -->
-            <div class="flex items-center">
-              <div class="flex">
-                <input id="remember-me" name="remember-me" type="checkbox" class="shrink-0 mt-0.5 border-gray-200 rounded text-blue-600 focus:ring-blue-500">
+                <p class="hidden text-xs text-red-600 mt-2" id="password-error">8+ characters required</p>
               </div>
-              <div class="ms-3">
-                <label for="remember-me" class="text-sm">Remember me</label>
-              </div>
-            </div>
-            <!-- End Checkbox -->
+              <!-- End Form Group -->
   
-            <button type="submit" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">Sign in</button>
-          </div>
-        </form>
-        <!-- End Form -->
+              <button type="submit" class="w-full mt-5 py-3 px-4 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700">Masuk</button>
+            </div>
+          </form>
+          <!-- End Form -->
+        </div>
       </div>
-    </div>
-    <!-- End Col -->
+      <!-- End Left Section -->
 
-    <div class="lg:col-span-4 mt-10 lg:mt-0">
-      <img class="w-full" src="/RektoratView2.jpg" alt="Image Description">
+      <!-- Right Section (3/5 on large screens, hidden on medium and smaller screens) -->
+      <div class="hidden lg:block lg:w-3/5 h-full relative">
+        <div class="absolute inset-0 bg-gradient-to-r from-gray-100 via-gray-100/5 to-transparent"></div>
+        <img src="/RektoratView2.jpg" class="w-full h-full object-cover" alt="Gambar Latar Belakang">
+      </div>      <!-- End Right Section -->
     </div>
-    <!-- End Col -->
+    <!-- End Flex Container -->
   </div>
-  <!-- End Grid -->
-</div>
-<!-- End Hero -->
+  <!-- End Hero -->
 
   <script src="/preline.js"></script>  
 </body>
 </html>
-
