--- a/views/Mahasiswa/home.ejs
+++ b/views/Mahasiswa/home.ejs
@@ -5,7 +5,8 @@
     <!-- Grid -->
     <div class="grid md:grid-cols-2 gap-4 md:gap-8 xl:gap-20 md:items-center">
         <div   class="relative ms-4">
-            <img class="w-100 rounded-md" src="https://images.unsplash.com/photo-1665686377065-08ba896d16fd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=700&h=800&q=80" alt="Image Description">
+          
+            <img class="w-100 rounded-md" src="/rektorat.jpg" alt="Image Description">
             <div class="absolute inset-0 -z-[1] bg-gradient-to-tr from-gray-200 via-white/0 to-white/0 size-full rounded-md mt-4 -mb-4 me-4 -ms-4 lg:mt-6 lg:-mb-6 lg:me-6 lg:-ms-6"></div>
       
             <!-- SVG-->
@@ -34,13 +35,13 @@
         </div>
         
       <div>
-        <h1 class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight">Start your journey with <span class="text-hijau">Unand</span></h1>
+        <h1 class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight"> <span class="text-hijau">Informasi Remedial Ujian Semester Ganjil 2023/2024</span> </h1>
         <p class="mt-3 text-lg text-gray-800">Hand-picked professionals and expertly crafted components, designed for any kind of entrepreneur.</p>
   
         <!-- Buttons -->
         <div class="mt-7 grid gap-3 w-full sm:inline-flex">
-          <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#">
-            Get started
+          <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700 disabled:opacity-50 disabled:pointer-events-none" href="#">
+            Lihat lebih detail
             <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
           </a>
           <a class="py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" href="#">
@@ -73,18 +74,18 @@
       <!-- Card -->
       <a class="group" href="#">
         <div class="relative pt-[50%] sm:pt-[70%] rounded-xl overflow-hidden">
-          <img class="size-full absolute top-0 start-0 object-cover group-hover:scale-105 transition-transform duration-500 ease-in-out rounded-xl" src="https://images.unsplash.com/photo-1586232702178-f044c5f4d4b7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80" alt="Image Description">
+          <img class="size-full absolute top-0 start-0 object-cover group-hover:scale-105 transition-transform duration-500 ease-in-out rounded-xl" src="/unand1.jpeg" alt="Image Description">
           <span class="absolute top-0 end-0 rounded-se-xl rounded-es-xl text-xs font-medium bg-gray-800 text-white py-1.5 px-3">
-            Sponsored
+            New
           </span>
         </div>
   
         <div class="mt-7">
           <h3 class="text-xl font-semibold text-gray-800 group-hover:text-gray-600">
-            Studio by Preline
+            Berita UNAND
           </h3>
           <p class="mt-3 text-gray-800">
-            Produce professional, reliable streams easily leveraging Preline's innovative broadcast studio
+            Deskripsi berita
           </p>
           <p class="mt-5 inline-flex items-center gap-x-1 text-blue-600 decoration-2 group-hover:underline font-medium">
             Read more
@@ -97,15 +98,15 @@
       <!-- Card -->
       <a class="group" href="#">
         <div class="relative pt-[50%] sm:pt-[70%] rounded-xl overflow-hidden">
-          <img class="size-full absolute top-0 start-0 object-cover group-hover:scale-105 transition-transform duration-500 ease-in-out rounded-xl" src="https://images.unsplash.com/photo-1542125387-c71274d94f0a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Image Description">
+          <img class="size-full absolute top-0 start-0 object-cover group-hover:scale-105 transition-transform duration-500 ease-in-out rounded-xl" src="/fti2.jpg" alt="Image Description">
         </div>
   
         <div class="mt-7">
           <h3 class="text-xl font-semibold text-gray-800 group-hover:text-gray-600">
-            Onsite
+            Berita FTI
           </h3>
           <p class="mt-3 text-gray-800">
-            Optimize your in-person experience with best-in-class capabilities like badge printing and lead retrieval
+            Deskripsi berita
           </p>
           <p class="mt-5 inline-flex items-center gap-x-1 text-blue-600 decoration-2 group-hover:underline font-medium">
             Read more
@@ -117,15 +118,15 @@
       <!-- Card -->
       <a class="group" href="#">
         <div class="relative pt-[50%] sm:pt-[70%] rounded-xl overflow-hidden">
-          <img class="size-full absolute top-0 start-0 object-cover group-hover:scale-105 transition-transform duration-500 ease-in-out rounded-xl" src="https://images.unsplash.com/photo-1542125387-c71274d94f0a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Image Description">
+          <img class="size-full absolute top-0 start-0 object-cover group-hover:scale-105 transition-transform duration-500 ease-in-out rounded-xl" src="/hmsi.png" alt="Image Description">
         </div>
   
         <div class="mt-7">
           <h3 class="text-xl font-semibold text-gray-800 group-hover:text-gray-600">
-            Onsite
+            Berita SI
           </h3>
           <p class="mt-3 text-gray-800">
-            Optimize your in-person experience with best-in-class capabilities like badge printing and lead retrieval
+            Deskripsi berita
           </p>
           <p class="mt-5 inline-flex items-center gap-x-1 text-blue-600 decoration-2 group-hover:underline font-medium">
             Read more
