--- a/views/Mahasiswa/home.ejs
+++ b/views/Mahasiswa/home.ejs
@@ -34,7 +34,7 @@
         </div>
         
       <div>
-        <h1 class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight">Start your journey with <span class="text-hijau">Unand</span></h1>
+        <h1 class="block text-3xl font-bold text-gray-800 sm:text-4xl lg:text-6xl lg:leading-tight">Selamat Datang <span class="text-hijau"><%=namaMahasiswa%></span></h1>
         <p class="mt-3 text-lg text-gray-800">Hand-picked professionals and expertly crafted components, designed for any kind of entrepreneur.</p>
   
         <!-- Buttons -->
