--- a/assets/style.css
+++ b/assets/style.css
@@ -566,10 +566,6 @@ video {
   border-width: 0;
 }
 
-.pointer-events-none {
-  pointer-events: none;
-}
-
 .collapse {
   visibility: collapse;
 }
@@ -701,6 +697,11 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .-mb-4 {
   margin-bottom: -1rem;
 }
@@ -723,6 +724,10 @@ video {
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .me-4 {
@@ -787,14 +792,6 @@ video {
 
 .mt-auto {
   margin-top: auto;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.mt-0\.5 {
-  margin-top: 0.125rem;
 }
 
 .block {
@@ -865,6 +862,11 @@ video {
   height: 2rem;
 }
 
+.size-\[100px\] {
+  width: 100px;
+  height: 100px;
+}
+
 .size-\[38px\] {
   width: 38px;
   height: 38px;
@@ -907,6 +909,10 @@ video {
   width: 100%;
 }
 
+.min-w-36 {
+  min-width: 9rem;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -921,6 +927,10 @@ video {
 
 .max-w-\[100rem\] {
   max-width: 100rem;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px;
 }
 
 .max-w-\[50rem\] {
@@ -940,10 +950,6 @@ video {
 }
 
 .flex-shrink-0 {
-  flex-shrink: 0;
-}
-
-.shrink-0 {
   flex-shrink: 0;
 }
 
@@ -1082,6 +1088,12 @@ video {
   margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
@@ -1129,10 +1141,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .rounded-e-md {
@@ -1332,10 +1340,6 @@ video {
   padding: 2.25rem;
 }
 
-.p-0 {
-  padding: 0px;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1405,6 +1409,10 @@ video {
   padding-bottom: 3rem;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .pe-8 {
   padding-inline-end: 2rem;
 }
@@ -1419,14 +1427,6 @@ video {
 
 .pt-\[50\%\] {
   padding-top: 50%;
-}
-
-.pe-3 {
-  padding-inline-end: 0.75rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
 }
 
 .text-center {
@@ -1484,6 +1484,10 @@ video {
   font-weight: 500;
 }
 
+.font-normal {
+  font-weight: 400;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1494,6 +1498,10 @@ video {
 
 .lowercase {
   text-transform: lowercase;
+}
+
+.not-italic {
+  font-style: normal;
 }
 
 .text-black {
@@ -1553,11 +1561,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .decoration-2 {
@@ -1953,17 +1956,16 @@ video {
     margin-bottom: 1.5rem;
   }
 
-  .sm\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .sm\:mt-0 {
     margin-top: 0px;
   }
 
   .sm\:mt-2 {
     margin-top: 0.5rem;
+  }
+
+  .sm\:mt-20 {
+    margin-top: 5rem;
   }
 
   .sm\:block {
@@ -2039,10 +2041,6 @@ video {
 
   .sm\:p-7 {
     padding: 1.75rem;
-  }
-
-  .sm\:p-0 {
-    padding: 0px;
   }
 
   .sm\:px-6 {
@@ -2237,14 +2235,6 @@ video {
     inset-inline-end: auto;
   }
 
-  .lg\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
-  .lg\:col-span-4 {
-    grid-column: span 4 / span 4;
-  }
-
   .lg\:-mb-6 {
     margin-bottom: -1.5rem;
   }
@@ -2263,10 +2253,6 @@ video {
 
   .lg\:mt-6 {
     margin-top: 1.5rem;
-  }
-
-  .lg\:mt-0 {
-    margin-top: 0px;
   }
 
   .lg\:block {
@@ -2298,21 +2284,8 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-7 {
-    grid-template-columns: repeat(7, minmax(0, 1fr));
-  }
-
   .lg\:flex-row {
     flex-direction: row;
-  }
-
-  .lg\:items-center {
-    align-items: center;
-  }
-
-  .lg\:gap-x-8 {
-    -moz-column-gap: 2rem;
-         column-gap: 2rem;
   }
 
   .lg\:px-8 {
@@ -2347,11 +2320,6 @@ video {
 @media (min-width: 1280px) {
   .xl\:gap-20 {
     gap: 5rem;
-  }
-
-  .xl\:gap-x-12 {
-    -moz-column-gap: 3rem;
-         column-gap: 3rem;
   }
 }
 
