--- a/views/Mahasiswa/headMhs.ejs
+++ b/views/Mahasiswa/headMhs.ejs
@@ -43,10 +43,10 @@
       <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow md:block md:w-auto md:basis-auto md:order-2 md:col-span-6">
         <div class="flex flex-col gap-y-4 gap-x-0 mt-5 md:flex-row md:justify-center md:items-center md:gap-y-0 md:gap-x-7 md:mt-0">
           <div>
-            <a class="relative inline-block text-hijau before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400" href="#" aria-current="page">Work</a>
+            <a class="relative inline-block text-hijau before:absolute before:bottom-0.5 before:start-0 before:-z-[1] before:w-full before:h-1 before:bg-lime-400" href="/" aria-current="page">Home</a>
           </div>
           <div>
-            <a class="inline-block text-hijau hover:text-gray-600" href="#">Home</a>
+            <a class="inline-block text-hijau hover:text-gray-600" href="/profil">Profil</a>
           </div>
           <div>
             <a class="inline-block text-hijau hover:text-gray-600" href="#">Formulir</a>
